<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    android:gravity="center"
    android:padding="@dimen/spacing_large">

    <TextView
        android:id="@+id/txtSettingsHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_settings"
        android:textColor="@color/primary"
        android:textSize="@dimen/text_size_title"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/spacing_medium" />

    <TextView
        android:id="@+id/txtSettingsDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_settings"
        android:textColor="@color/text_secondary"
        android:textSize="@dimen/text_size_medium"
        android:textAlignment="center"
        android:layout_marginBottom="@dimen/spacing_xlarge" />

    <Button
        android:id="@+id/btnBackSettings"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:backgroundTint="@color/primary_variant"
        android:text="@string/btn_back"
        android:textColor="@color/text_white" />

</LinearLayout>